fix: z-index

--- a/src/assets/scss/_toaster.scss
+++ b/src/assets/scss/_toaster.scss
@@ -1,7 +1,8 @@
 .sol-toaster {
-  @apply fixed z-50 w-full;
+  @apply fixed w-full;
   max-width: 336px;
   transition: all 0.3s ease;
+  z-index: 99999;
 
   .sol-toast-item {
     @apply py-6 px-5 rounded mb-2;
